# CS126-Paint-Project

./: .gitignore  CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cc
blocks/PretzelGUI/src/components/: BasePretzel.cpp  BasePretzel.h  PretzelRoot.cpp  PretzelRoot.h  PretzelRow.cpp  PretzelRow.h  ScrollPane.cpp  ScrollPane.h  WindowSystem.cpp  WindowSystem.h
blocks/PretzelGUI/src/modules/: PretzelButton.cpp  PretzelButton.h  PretzelColorPicker.cpp  PretzelColorPicker.h  PretzelEnum.cpp  PretzelEnum.h  PretzelLabel.cpp  PretzelLabel.h  PretzelSaveLoad.cpp  PretzelSaveLoad.h  PretzelShaders.h  PretzelSlider.cpp  PretzelSlider.h  PretzelTextField.cpp  PretzelTextField.h  PretzelToggle.cpp  PretzelToggle.h
blocks/PretzelGUI/src/pretzel/: PretzelGlobal.cpp  PretzelGlobal.h  PretzelGui.cpp  PretzelGui.h
include/: Canvas.h  PaintApp.h  RGBPixel.h  Resources.h  Toolbar.h  ToolbarButton.h
include/draw_tools/: Eraser.h  PaintBrush.h  PaintBucket.h  PaintTool.h  ShapeTool.h
src/: Canvas.cpp  PaintApp.cpp  RGBPixel.cpp  Toolbar.cpp  ToolbarButton.cpp
src/draw_tools/: Eraser.cpp  PaintBrush.cpp  PaintBucket.cpp  ShapeTool.cpp
tests/: TestCanvas.cpp  TestPaintBrush.cpp
